		made package-level private
	HistogramSeriesAttributes.[get|set]LineOpacity() renamed to [get|set]StrokeOpacity()
	HistogramSeriesAttributes.[get|set]Thickness() now uses doubles
	TimeSeriesChartingPropertyInspector.addToMainSeries(...) made private
	Moved data culling tasks from TimeSeriesChartingPropertyInspector to 
		TimeSeriesAttributes
	Removed two methods from DataCuller
	Methods in DataCuller made public
	Various MinGapDataCuller methods made private
	Reindented
	SimpleInspector revised.  MAX_PROPERTIES deleted and replaced with
		a private maximum properties variable and DEFAULT_MAX_PROPERTIES.
		The constructors were revamped, and new ones added.  Children
		SimpleInspectors now use the same max properties as their parents.
	GUIState.getMaximumPropertiesForInspector() added
	Updated wcss tutorial organization
	Deleted mason.1.3.1.command

Version 17
	Minor tweaks to Ant.java.  Thanks to Amit Goel <subs@agoel.com>
	Bug fix to tutorials in documentation.  Thanks to Jonathan Rowe
		<J.E.Rowe@cs.bham.ac.uk>
	SimpleProperties now treats toString() as a property for all CharSequence
		subclasses.
	Error in displaying "More Options" window in Display3D fixed.  Thanks to Jon
		Rowe <J.E.Rowe@cs.bham.ac.uk>
	Added sim.util.distribution to the Makefile (oops).  Thanks to Chris Hollander
		<chris.hollander@gmail.com>
	Made all classes in sim.util.distributions Serializable
	Added a fixed serialVerUID (=1) to all Serializable classes
	Various tweaks and fixes.  Thanks to Richard Legendi <rlegendi@aitia.ai>
	Added Interval.contains(Number) and Interval.contains(doube).  Thanks to
		Benjamin Axelrod <baxelrod@irobot.com>
	Added functions to Double3D.  Thanks to Benjamin Axelrod 
		<baxelrod@irobot.com>
	Tweaks to Double3D and Double2D's normalize() and resize() functions.
        Updated MersenneTwister and MersenneTwisterFast to allow full-open, half-open 
		(both directions) and fully-closed intervals for nextDouble and nextFloat
